html, css and script updated

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 <body>
     <header id="header">
         <nav id="nav-bar">
-            <div class="wrapper"><a href="#home"><img id="header-img" src="https://lh3.googleusercontent.com/9lz6kj06mhabmH4RAdBAEXSCVjjrZUXxDOmRam3hObSTEkB4cYY_0eyrpChPFgiYZNi8qrXpv-s6A1t0LwRFM3jJf2besB-_EtPj1fFhp9XW2voGRseq-6C27qYHfW7xblrTMFqctq_ti68SofTKBmldEB1EflAUc6f_YAOtfLWxHAWJwqD785Nou-rIO94z_lNh6W8957DFwa5ClTQOEQ5pjM2QO4sSjZIfWrbaIgAkQ2vSUvfgBJjCzbrCynxKZjgxCttF0XjIFGGw97kokWa7zO7Tj4pFjmR7dIvhCCWlarhvfO27Zs0jrdoEe_BMkSZ1d0fVGo9O6qzF1isF9Zr9mJbpOnS9DX4xEWqkXe2rXgZ-HxBvRe_CONuYuaxFXJ7ohbQLsJ7rdJOqtKJW23nw4V4jXT3_6PfbmZEq09bpcufbsB1KUmWF7J9RKHuSioDi9tTX9nO7vZs6KuQWCumqH6j3KJN8Y6RHjJnm1681cVk24VqbGMmAE30HuMePU7ODvIaMALS2CLPUuAWgvcabyL-Nfdw2v6z7mwttVu8_pWBup63JU6kOSiy2TzRmvoEiNqBVZZz_-I_yu1KRjr12LL1yJQ4OTd5yEJY=w400-h134-no"
-                        alt="Homestead Realty logo"></a></div>
+            <div class="wrapper"><a href="#home"><img id="header-img" src="./img/logo.jpg" alt="Homestead Realty logo"></a></div>
             <label for="dropdown" class="toggle">
                 <div class="bars-wrapper">
                     <span class="bars"></span>
@@ -71,8 +70,7 @@
             <h2>Houses Available for purchase now</h2>
             <div id="available-wrapper">
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1475855581690-80accde3ae2b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b749ef140950edd755a159baaca6b6f0&auto=format&fit=crop&w=750&q=80"
-                        alt="house for purchase">
+                    <img src="./img/purchase-img1.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$250,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>3bd <i class="fa fa-bath"
                             aria-hidden="true"></i>2br 1646Sqft</span>
@@ -81,8 +79,7 @@
                 </a>
 
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1481934633871-fc3e3ba6f0e0?ixlib=rb-0.3.5&s=8c6be721d9bf41ab941fd82a50802ff7&auto=format&fit=crop&w=750&q=80"
-                        alt="house for purchase">
+                    <img src="./img/purchase-img2.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$350,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>2bd <i class="fa fa-bath"
                             aria-hidden="true"></i>1br 1006Sqft</span>
@@ -90,8 +87,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1472224371017-08207f84aaae?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d5e5f5fb0390274713e4a135b74b2678&auto=format&fit=crop&w=750&q=80"
-                        alt="house for purchase">
+                    <img src="./img/purchase-img3.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$270,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>3bd <i class="fa fa-bath"
                             aria-hidden="true"></i>2br 1846Sqft</span>
@@ -99,8 +95,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1496320540980-6957e6d80966?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7ff8799271688b8db2aa0aeaea35b454&auto=format&fit=crop&w=750&q=80"
-                        alt="house for purchase">
+                    <img src="./img/purchase-img4.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$3,700,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>12bd <i class="fa fa-bath"
                             aria-hidden="true"></i>10br 28046Sqft</span>
@@ -108,8 +103,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1475855581690-80accde3ae2b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b749ef140950edd755a159baaca6b6f0&auto=format&fit=crop&w=750&q=80"
-                        alt="house for purchase">
+                    <img src="./img/purchase-img5.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$250,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>3bd <i class="fa fa-bath"
                             aria-hidden="true"></i>2br 1646Sqft</span>
@@ -118,8 +112,7 @@
                 </a>
 
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1481934633871-fc3e3ba6f0e0?ixlib=rb-0.3.5&s=8c6be721d9bf41ab941fd82a50802ff7&auto=format&fit=crop&w=750&q=80"
-                        alt="house for purchase">
+                    <img src="./img/purchase-img1.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$350,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>2bd <i class="fa fa-bath"
                             aria-hidden="true"></i>1br 1006Sqft</span>
@@ -127,8 +120,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1472224371017-08207f84aaae?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d5e5f5fb0390274713e4a135b74b2678&auto=format&fit=crop&w=750&q=80"
-                        alt="house for purchase">
+                    <img src="./img/purchase-img7.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$270,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>3bd <i class="fa fa-bath"
                             aria-hidden="true"></i>2br 1846Sqft</span>
@@ -136,8 +128,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1496320540980-6957e6d80966?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7ff8799271688b8db2aa0aeaea35b454&auto=format&fit=crop&w=750&q=80"
-                        alt="house for purchase">
+                    <img src="./img/purchase-img8.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$3,700,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>12bd <i class="fa fa-bath"
                             aria-hidden="true"></i>10br 28046Sqft</span>
@@ -146,8 +137,7 @@
                 </a>
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1467702898878-82e7bba90abb?ixlib=rb-0.3.5&s=a113d833d63493275df222d8477f0415&auto=format&fit=crop&w=750&q=80"
-                        alt="house for purchase">
+                    <img src="./img/purchase-img9.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$700,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>5bd <i class="fa fa-bath"
                             aria-hidden="true"></i>3br 5046Sqft</span>
@@ -155,8 +145,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1494526585095-c41746248156?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fd170b4cebb0b97e6337529754defcf7&auto=format&fit=crop&w=750&q=80"
-                        alt="house for purchase">
+                    <img src="./img/purchase-img4.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$500,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>5bd <i class="fa fa-bath"
                             aria-hidden="true"></i>4br 4046Sqft</span>
@@ -171,8 +160,7 @@
             <h2>Apartments Available for rent</h2>
             <div id="rent-wrapper">
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1502672260266-1c1ef2d93688?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7eb3cf84fa5988885f62b3ee0dfac1fe&auto=format&fit=crop&w=973&q=80"
-                        alt="apartment for rent">
+                    <img src="./img/rent-img1.jpg" alt="apartment for rent">
                     <h4 class="info-tiles info-tiles-header">$800.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>1bd <i class="fa fa-bath"
                             aria-hidden="true"></i>1br 350Sqft</span>
@@ -180,8 +168,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1484154218962-a197022b5858?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6ba2b9dcc1af593a7d93ed9b4ed952ac&auto=format&fit=crop&w=753&q=80"
-                        alt="apartment for rent">
+                    <img src="./img/rent-img2.jpg" alt="apartment for rent">
                     <h4 class="info-tiles info-tiles-header">$1,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>2bd <i class="fa fa-bath"
                             aria-hidden="true"></i>2br 846Sqft</span>
@@ -189,8 +176,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1488805990569-3c9e1d76d51c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=52ab20c13e8729e918954bede90d8d8a&auto=format&fit=crop&w=750&q=80"
-                        alt="apartment for rent">
+                    <img src="./img/rent-img3.jpg" alt="apartment for rent">
                     <h4 class="info-tiles info-tiles-header">$700.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>1bd <i class="fa fa-bath"
                             aria-hidden="true"></i>1br 446Sqft</span>
@@ -198,8 +184,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1493809842364-78817add7ffb?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=f3619a27d02a9cbafafbb9d94d477160&auto=format&fit=crop&w=750&q=80"
-                        alt="apartment for rent">
+                    <img src="./img/rent-img4.jpg" alt="apartment for rent">
                     <h4 class="info-tiles info-tiles-header">$1,500.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>3bd <i class="fa fa-bath"
                             aria-hidden="true"></i>2br 1006Sqft</span>
@@ -207,8 +192,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1499916078039-922301b0eb9b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7a1118c0401f3b8d3ba2bcf5f6b5e2e6&auto=format&fit=crop&w=800&q=80"
-                        alt="apartment for rent">
+                    <img src="./img/rent-img5.jpg" alt="apartment for rent">
                     <h4 class="info-tiles info-tiles-header">$500.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>1bd <i class="fa fa-bath"
                             aria-hidden="true"></i>1br 305Sqft</span>
@@ -216,8 +200,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1486304873000-235643847519?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4d6fa1727a25c64f74f4ebbe9ee23063&auto=format&fit=crop&w=889&q=80"
-                        alt="apartment for rent">
+                    <img src="./img/rent-img6.jpg" alt="apartment for rent">
                     <h4 class="info-tiles info-tiles-header">$500.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>1bd <i class="fa fa-bath"
                             aria-hidden="true"></i>1br 605Sqft</span>
@@ -225,8 +208,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1494203484021-3c454daf695d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=87489e9e4b1f12ce68f0c790d2c39682&auto=format&fit=crop&w=750&q=80"
-                        alt="apartment for rent">
+                    <img src="./img/rent-img7.jpg" alt="apartment for rent">
                     <h4 class="info-tiles info-tiles-header">$800.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>2bd <i class="fa fa-bath"
                             aria-hidden="true"></i>1br 705Sqft</span>
@@ -234,8 +216,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1499916078039-922301b0eb9b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=7a1118c0401f3b8d3ba2bcf5f6b5e2e6&auto=format&fit=crop&w=800&q=80"
-                        alt="apartment for rent">
+                    <img src="./img/rent-img8.jpg" alt="apartment for rent">
                     <h4 class="info-tiles info-tiles-header">$500.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>1bd <i class="fa fa-bath"
                             aria-hidden="true"></i>1br 305Sqft</span>
@@ -243,8 +224,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1486304873000-235643847519?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4d6fa1727a25c64f74f4ebbe9ee23063&auto=format&fit=crop&w=889&q=80"
-                        alt="apartment for rent">
+                    <img src="./img/rent-img3.jpg" alt="apartment for rent">
                     <h4 class="info-tiles info-tiles-header">$500.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>1bd <i class="fa fa-bath"
                             aria-hidden="true"></i>1br 605Sqft</span>
@@ -252,8 +232,7 @@
 
                 </a>
                 <a href="#" class="tiles">
-                    <img src="https://images.unsplash.com/photo-1494203484021-3c454daf695d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=87489e9e4b1f12ce68f0c790d2c39682&auto=format&fit=crop&w=750&q=80"
-                        alt="apartment for rent">
+                    <img src="./img/rent-img5.jpg" alt="apartment for rent">
                     <h4 class="info-tiles info-tiles-header">$800.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>2bd <i class="fa fa-bath"
                             aria-hidden="true"></i>1br 705Sqft</span>
