--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <meta content="UTF-8" http-equiv="encoding">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <meta name="description" content="Get the local weather in your city">
+    <meta name="description" content="real estate landing page freecodecamp project">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="./favicon.png">
     <!-- build:css css/main.css -->
