--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <img src="./img/purchase-img1.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$250,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>3bd <i class="fa fa-bath"
-                            aria-hidden="true"></i>2br 1646Sqft</span>
+                            aria-hidden="true"></i>2br 1,646Sqft</span>
                     <p class="info-tiles info-tiles-p">Cane Garden, Kingstown</p>
 
                 </a>
@@ -82,7 +82,7 @@
                     <img src="./img/purchase-img2.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$350,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>2bd <i class="fa fa-bath"
-                            aria-hidden="true"></i>1br 1006Sqft</span>
+                            aria-hidden="true"></i>1br 1,006Sqft</span>
                     <p class="info-tiles info-tiles-p">Utah, United States</p>
 
                 </a>
@@ -90,7 +90,7 @@
                     <img src="./img/purchase-img3.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$270,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>3bd <i class="fa fa-bath"
-                            aria-hidden="true"></i>2br 1846Sqft</span>
+                            aria-hidden="true"></i>2br 1,846Sqft</span>
                     <p class="info-tiles info-tiles-p">Angeles Forest, Arcadia, US</p>
 
                 </a>
@@ -98,7 +98,7 @@
                     <img src="./img/purchase-img4.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$3,700,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>12bd <i class="fa fa-bath"
-                            aria-hidden="true"></i>10br 28046Sqft</span>
+                            aria-hidden="true"></i>10br 28,046Sqft</span>
                     <p class="info-tiles info-tiles-p">Hampstead Heath, London</p>
 
                 </a>
@@ -106,7 +106,7 @@
                     <img src="./img/purchase-img5.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$250,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>3bd <i class="fa fa-bath"
-                            aria-hidden="true"></i>2br 1646Sqft</span>
+                            aria-hidden="true"></i>2br 1,646Sqft</span>
                     <p class="info-tiles info-tiles-p">Cane Garden, Kingstown</p>
 
                 </a>
@@ -115,7 +115,7 @@
                     <img src="./img/purchase-img1.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$350,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>2bd <i class="fa fa-bath"
-                            aria-hidden="true"></i>1br 1006Sqft</span>
+                            aria-hidden="true"></i>1br 1,006Sqft</span>
                     <p class="info-tiles info-tiles-p">Utah, United States</p>
 
                 </a>
@@ -123,7 +123,7 @@
                     <img src="./img/purchase-img7.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$270,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>3bd <i class="fa fa-bath"
-                            aria-hidden="true"></i>2br 1846Sqft</span>
+                            aria-hidden="true"></i>2br 1,846Sqft</span>
                     <p class="info-tiles info-tiles-p">Angeles Forest, Arcadia, US</p>
 
                 </a>
@@ -131,7 +131,7 @@
                     <img src="./img/purchase-img8.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$3,700,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>12bd <i class="fa fa-bath"
-                            aria-hidden="true"></i>10br 28046Sqft</span>
+                            aria-hidden="true"></i>10br 28,046Sqft</span>
                     <p class="info-tiles info-tiles-p">Hampstead Heath, London</p>
 
                 </a>
@@ -140,7 +140,7 @@
                     <img src="./img/purchase-img9.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$700,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>5bd <i class="fa fa-bath"
-                            aria-hidden="true"></i>3br 5046Sqft</span>
+                            aria-hidden="true"></i>3br 5,046Sqft</span>
                     <p class="info-tiles info-tiles-p">Saint Kitts and Nevis</p>
 
                 </a>
@@ -148,7 +148,7 @@
                     <img src="./img/purchase-img4.jpg" alt="house for purchase">
                     <h4 class="info-tiles info-tiles-header">$500,000.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>5bd <i class="fa fa-bath"
-                            aria-hidden="true"></i>4br 4046Sqft</span>
+                            aria-hidden="true"></i>4br 4,046Sqft</span>
                     <p class="info-tiles info-tiles-p">South Salt Lake, US</p>
 
                 </a>
@@ -187,7 +187,7 @@
                     <img src="./img/rent-img4.jpg" alt="apartment for rent">
                     <h4 class="info-tiles info-tiles-header">$1,500.00</h4>
                     <span class="info-tiles info-tiles-span"> <i class="fa fa-bed" aria-hidden="true"></i>3bd <i class="fa fa-bath"
-                            aria-hidden="true"></i>2br 1006Sqft</span>
+                            aria-hidden="true"></i>2br 1,006Sqft</span>
                     <p class="info-tiles info-tiles-p">Saint Kitts and Nevis</p>
 
                 </a>
@@ -250,7 +250,7 @@
                     <div class="tag-header bronze">Bronze</div>
                     <div class="price">$75k - 599k</div>
                     <ul>
-                        <li><strong>Property size:</strong> Up to 5000Sqrt</li>
+                        <li><strong>Property size:</strong> Up to 5,000Sqft</li>
                         <li><strong>Home improvements:</strong> No</li>
                         <li><strong>Buyers Agent provided:</strong> No</li>
                         <li><strong>Moving consultants:</strong> No</li>
@@ -263,7 +263,7 @@
                     <div class="tag-header gold">Gold</div>
                     <div class="price">$600k - $2MM</div>
                     <ul>
-                        <li><strong>Property size:</strong> Up to 15,000Sqrt</li>
+                        <li><strong>Property size:</strong> Up to 15,000Sqft</li>
                         <li><strong>Home improvements:</strong> Yes</li>
                         <li><strong>Buyers Agent provided:</strong> No</li>
                         <li><strong>Moving consultants:</strong> No</li>
@@ -277,7 +277,7 @@
                     <div class="tag-header platinum">Platinum</div>
                     <div class="price">$2.1MM - $5MM</div>
                     <ul>
-                        <li><strong>Property size:</strong> Up to 50,000Sqrt</li>
+                        <li><strong>Property size:</strong> Up to 50,000Sqft</li>
                         <li><strong>Home improvements:</strong> Yes</li>
                         <li><strong>Buyers Agent provided:</strong> Yes</li>
                         <li><strong>Moving consultants:</strong> Yes</li>
